--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "mangadex-proxy",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node api/index.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
